# AI-ML-Projects

./: .gitignore  README.MD  Susnata_VISION_TRANSFORMERS1x_MNSIT_multiclassification (1).ipynb
A Back-Mapping of PCA loadings/: README.MD
A GOLD TIER CLASSIFICATION FOR PREDICTIVE MAINTENANCE/: My_S_Tier_Calibrated_Rare_Event_Classification_for_Predictive_Maintenance.ipynb  README.MD  Susnata_S_Tier_Calibrated_Rare_Event_Classification_for_Predictive_Maintenance (1).ipynb
A LSTM x STEEL X FORECASTING(time series)/: README.MD  susnataxLSTMxSteel (1).ipynb
A Langchain x RAG x Vectordb(hnsw x mmr)/: Readme.md  main.py  main_fastapi.py  main_mmr_hnsw.py  rag.py  rag_fastapi.py  ragmmr.py
A LoRa x FinetuneGPT2_m_Abuse_reasoner/: Susnata_finetunellm_GPT2_Abuse_detect.ipynb  Susnata_finetunellm_GPT2_Abuse_detector.ipynb
A LoRa_finetunexGPT2/: Susnata_finetunellm_GPT2_Abuse_detect.ipynb  lora_finetune_readme.md
A Lovable x LangGraph AI Agent Advanced app builder/: README1.md  main.py  pyproject.toml
A Misclassified Entity Bonanza/: A_Cost_Aware__Misclassified__Bonanza_ (1).ipynb  README.MD
A Multiturn_Chatbot x ConversationMemoryAgent x Langchain/: README.md  pyproject.toml  susnata_langchain_agent.py  susnata_langchain_agent_with_memory.py  susnataagentapp_memory.py  susnataapp_py.py
A QUANTILE Regression(0.9.0.5LAD,0.1)/: README.MD  Susnata_Quantile_Regression_demand (1).ipynb
A TRANSFORMER X CNN Speech Emotion Recognition/: diagram  pyproject.toml  requirements.txt  susnata_CNN_X_TransformerXSpeech_emotion_recognition.ipynb  susnata_app.py
(+108 files in other folders)
