[project]
name = "susnata-transformersxcnn-speech-emotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "soundfile>=0.13.1",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
